# ma-provider-zvuk-music

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.en.md  README.md  README.ru.md  SECURITY.md  docker-compose.dev.yml  docker-compose.e2e.yml  mkdocs.yml  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  improvement_proposal.yml  upstream_api_change.yml
.github/workflows/: backport.yml  check-config-sync.yml  check-feature-consistency.yml  check-rewrite-safe.yml  copilot-triage.yml  docs.yml  issue-project.yml  pipeline.yml  release.yml  security.yml  sync-labels.yml  sync-to-fork.yml  test-minimal.yml  test.yml  version-guard.yml
docs/: configuration.md  contributing.md  dev-docker.md  development.md  incident-management.md  index.md  known-issues.md  testing.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/src/content/docs/: configuration.md  contributing.md  dev-docker.md  development.md  incident-management.md  index.md  known-issues.md  promotion.md  testing.md
docs-site/src/content/docs/en/: configuration.md  contributing.md  dev-docker.md  development.md  incident-management.md  index.md  known-issues.md  testing.md
docs-site/src/content/docs/en/features/: audio-quality.md  browse.md  library.md  lyrics.md  recommendations.md  search.md  similar-tracks.md
docs-site/src/content/docs/features/: audio-quality.md  browse.md  library.md  lyrics.md  recommendations.md  search.md  similar-tracks.md
docs/stylesheets/: extra.css
provider/: __init__.py  api_client.py  constants.py  manifest.json  parsers.py  provider.py
scripts/: dev-server.sh  docker-init.sh  e2e.sh  setup.sh  test-upstream.sh
specs/: feature-spec.md
tests/: test_api_client.py  test_library.py  test_lyrics.py  test_parsers.py  test_provider_browse.py  test_stream_details.py
