[project]
name = "ma-provider-zvuk-music"
version = "1.8.0"
description = "Zvuk Music provider for Music Assistant"
requires-python = ">=3.12"
dependencies = ["zvuk-music[async]==0.6.1"]

[project.optional-dependencies]
e2e = [
  "pytest==9.0.2",
  "pytest-playwright>=0.5.0",
  "python-dotenv>=1.0.0",
]
test = [
  "pytest==9.0.2",
  "pytest-asyncio>=0.24",
  "pytest-aiohttp==1.1.0",
  "pytest-cov==7.0.0",
  "syrupy==5.0.0",
  "codespell==2.4.1",
  "music-assistant @ git+https://github.com/music-assistant/server.git@dev",
  "zvuk-music[async]==0.6.1",
  "ruff==0.14.13",
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "pre-commit-hooks==6.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["provider*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  "ignore:coroutine.*was never awaited:RuntimeWarning",
]
markers = [
  "e2e: end-to-end tests requiring Docker and a real Zvuk token",
  "integration: tests requiring external services",
]

[tool.codespell]
ignore-words-list = "provid,hass,followings,childs,explict,additionals,commitish,nam,"
skip = "*.js,*.svg"

[tool.mypy]
python_version = "3.12"
platform = "linux"
follow_imports = "silent"
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["tests/e2e"]
disable_error_code = [
  "annotation-unchecked",
  "import-not-found",
  "import-untyped",
]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = [
  "ignore-without-code",
  "redundant-self",
  "truthy-iterable",
]
extra_checks = false
local_partial_types = true
no_implicit_optional = true
no_implicit_reexport = true
packages = ["tests", "provider"]
show_error_codes = true
strict_equality = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

# provider.py subclasses MusicProvider and uses use_cache (untyped decorator) from ma-server;
# relax rules that trip on third-party base class typing
[[tool.mypy.overrides]]
module = "provider.provider"
disallow_subclassing_any = false
disallow_untyped_decorators = false

# Tests use handle_zvuk_errors() as a decorator on local async functions; mypy 1.19.1 cannot
# resolve ParamSpec + Awaitable in this context and incorrectly flags [untyped-decorator].
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
